# md2markup

./: README.md  md2markup.py  pyproject.toml
tests/: test_converter.py
tests/fixtures/: sample.md  sample_expected.txt
